--- a/index.html
+++ b/index.html
@@ -2,6 +2,10 @@
 <html>
 <body>
 <h1>Bye Bye World, Hello VR</h1>
-<p>I'm hosted with GitHub Pages.</p>
+<p>Test text</p>
 </body>
 </html>
+
+<!--Arne Blau-->
+<!--Susanne Grün-->
+<!--Feli orange-->
