--- a/index.html
+++ b/index.html
@@ -1,5 +1,11 @@
 <!DOCTYPE html>
-<!DOCTYPE html>
+
+<!--Arne Blau-->
+<!--Susanne Grün-->
+<!--Feli orange-->
+<!--Chris magenta -->
+<!--Fiona gelb-->
+
 <html>
 <head>
   <script src="https://aframe.io/releases/1.0.4/aframe.min.js"></script>
@@ -8,14 +14,14 @@
 <body>
  <a-scene>
 
-  <a-box
-    animation="property: position; to: 1 8 -10; dur: 2000; easing: linear; loop: true"
-    position="-1 3 -3"
-    rotation="0 45 0"
-    color="#4CC3D9">
-  </a-box>
+  <a-sphere
+    animation="property: position; to: 1 20 -10; dur: 5000; easing: linear; loop: true"
+    position="1 1 -10"
+    rotation="0 60 0"
+    color="#ffb800">
+  </a-sphere>
 
-  <a-plane position="0 0 -4" rotation="-90 0 0" width="4" height="4" color="#7BC8A4"></a-plane>
+  <a-plane position="0 0 -4" rotation="-90 0 0" width="100" height="100" color="#7BC8A4"></a-plane>
 
   <a-sky color="#ECECEC"></a-sky>
 
@@ -23,10 +29,3 @@
 
  </body>
 </html>
-
-
-<!--Arne Blau-->
-<!--Susanne Grün-->
-<!--Feli orange-->
-<!--Chris magenta -->
-<!--Fiona gelb-->
