--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     animation="property: position; to: 1 20 -10; dur: 5000; easing: linear; loop: true"
     position="1 1 -10"
     rotation="0 60 0"
-    color="#eeeeee">
+    color="#aaaaaa">
   </a-sphere>
 
   <a-plane position="0 0 -4" rotation="-90 0 0" width="100" height="100" color="#7BC8A4"></a-plane>
