--- a/index.html
+++ b/index.html
@@ -2,9 +2,11 @@
 
 <!--Arne Blau-->
 <!--Susanne Grün-->
-<!--Feli orange-->
+<!--Feli dunkelblau-->
 <!--Chris magenta -->
 <!--Fiona gelb-->
+
+<!-- Felix Cyan -->
 
 <html>
 <head>
@@ -12,16 +14,38 @@
 </head>
 
 <body>
- <a-scene>
+ <a-scene id="main-scene">
 
   <a-sphere
-    animation="property: position; to: 1 20 -10; dur: 5000; easing: linear; loop: true"
-    position="1 1 -10"
+    position="20 5 10"
     rotation="0 60 0"
-    color="#aaaaaa">
+    color="#aaaaaa"
+    radius="5">
   </a-sphere>
 
-  <a-plane position="0 0 -4" rotation="-90 0 0" width="100" height="100" color="#7BC8A4"></a-plane>
+  <a-sphere
+    position="6 5 -10"
+    rotation="0 60 0"
+    color="#aaaaaa"
+    radius="5">
+  </a-sphere>
+
+  <a-sphere
+    position="-10 5 10"
+    rotation="0 60 0"
+    color="#aaaaaa"
+    radius="5">
+  </a-sphere>
+
+  <a-sphere
+    position="30 5 -20"
+    rotation="0 60 0"
+    color="#aaaaaa"
+    radius="5">
+  </a-sphere>
+
+
+  <a-plane position="0 0 -4" rotation="-90 0 0" width="1000" height="1000" color="#7BC8A4"></a-plane>
 
   <a-sky color="#ECECEC"></a-sky>
 
