--- a/index.html
+++ b/index.html
@@ -8,19 +8,76 @@
 
 <!-- Felix Cyan -->
 
+
 <html>
 <head>
   <script src="https://aframe.io/releases/1.0.4/aframe.min.js"></script>
-</head>
+
+    <script type="text/javascript">
+
+    AFRAME.registerComponent('cursor-listener', {
+      init: function () {
+        var lastIndex = -1;
+        var COLORS = ['red', 'green', 'blue'];
+        this.el.addEventListener('click', function (evt) {
+        lastIndex = (lastIndex + 1) % COLORS.length;
+        this.setAttribute('material', 'color', COLORS[lastIndex]);
+        console.log('I was clicked at: ', evt.detail.intersection.point);
+        });
+      }
+    });
+
+    </script>
+  </head>
+
+
 
 <body>
  <a-scene id="main-scene">
 
+
+   <!-- Cursor etablieren -->
+
+        <a-entity camera look-controls controls wasd-controls>
+          <a-entity cursor
+            animation__click="property: scale; startEvents: click; easing: easeInCubic; dur: 150; from: 0.1 0.1 0.1; to: 1 1 1"
+            animation__fusing="property: scale; startEvents: fusing; easing: easeInCubic; dur: 1500; from: 1 1 1; to: 0.1 0.1 0.1"
+            animation__mouseleave="property: scale; startEvents: mouseleave; easing: easeInCubic; dur: 500; to: 1 1 1"
+            cursor="fuse: true;"
+            position="0 0 -1"
+            geometry="primitive: ring; radiusInner: 0.01; radiusOuter: 0.02"
+            material="color: grey; shader: flat"
+            raycaster="far: 20; interval: 1000; objects: .clickable">
+          </a-entity>
+        </a-entity>
+
+
+   <!-- Die Kugeln -->
+
+
+   <!-- neue Kugel, die klickbar ist -->
+  <a-sphere
+        class="clickable"
+        cursor-listener
+        color="#AAAAA"
+        position="6 7 -10"
+        rotation="0 60 0"
+        radius="5">
+  </a-sphere>
+
+
   <a-sphere
     position="20 5 10"
     rotation="0 60 0"
-    color="#aaaaaa"
+    color="yellow"
     radius="5">
+  </a-sphere>
+
+  <a-sphere
+    position="0 0 0"
+    rotation="0 0 0"
+    color="yellow"
+    radius="10">
   </a-sphere>
 
   <a-sphere
@@ -53,3 +110,26 @@
 
  </body>
 </html>
+
+
+
+
+
+
+
+
+
+
+<!-- klickbarer Link
+
+        <a-link class="clickable" href="someOtherWebpage.html" position="-2 1 -1" title="Some Other Webpage" image="#scene_2"></a-link>
+
+-->
+
+
+
+<!-- Objekt wird durch Kamera look getriggert
+
+<a-entity camera look-controls controls wasd-controls>           <a-entity cursor             animation__click="property: scale; startEvents: click; easing: easeInCubic; dur: 150; from: 0.1 0.1 0.1; to: 1 1 1"             animation__fusing="property: scale; startEvents: fusing; easing: easeInCubic; dur: 1500; from: 1 1 1; to: 0.1 0.1 0.1"             animation__mouseleave="property: scale; startEvents: mouseleave; easing: easeInCubic; dur: 500; to: 1 1 1"             cursor="fuse: true;"             position="0 0 -1"             geometry="primitive: ring; radiusInner: 0.02; radiusOuter: 0.03"             material="color: blue; shader: flat"             raycaster="far: 20; interval: 1000; objects: .clickable">           </a-entity>         </a-entity>
+
+-->
