alte kugeln raus

--- a/index.html
+++ b/index.html
@@ -66,6 +66,8 @@
   </a-sphere>
 
 
+<!-- die "alten" Kugeln
+
   <a-sphere
     position="20 5 10"
     rotation="0 60 0"
@@ -99,12 +101,12 @@
     rotation="0 60 0"
     color="#aaaaaa"
     radius="5">
-  </a-sphere>
+  </a-sphere> -->
 
 
-  <a-plane position="0 0 -4" rotation="-90 0 0" width="1000" height="1000" color="#7BC8A4"></a-plane>
+  <a-plane position="0 0 0" rotation="-90 0 0" width="1000" height="1000" color="#7BC8A4"></a-plane>
 
-  <a-sky color="#ECECEC"></a-sky>
+  <a-sky color="#eeeeee"></a-sky>
 
  </a-scene>
 
