--- a/index.html
+++ b/index.html
@@ -31,11 +31,11 @@
               <!-- Animationen -->
               <a-mixin
                 id="scaleUpMixin"
-                animation__scale="property: scale; dur: 500; easing: easeInOutQuad; to: 1.5 1.5 1.5;"
+                animation__scale="property: position; to: 1 8 -10; dur: 2000; easing: linear; loop: false"
               ></a-mixin>
               <a-mixin
                 id="scaleDownMixin"
-                animation__scale2="property: scale; dur: 500; easing: easeInOutQuad; to: 1 1 1;"
+                animation__scale2="property: position; to:0 1.8 -5; dur: 2000; easing: linear; loop: false"
               ></a-mixin>
               <!-- <a-mixin id="fadeInText" animation__showText="property: opacity; dur: 500; to: 1; startEvents: startFadeIn; pauseEvents: startFadeOut"></a-mixin>
                 <a-mixin id="fadeOutText" animation__hideText="property: opacity; dur: 500; to: 0; startEvents: startFadeOut; pauseEvents: startFadeIn"></a-mixin> -->
