--- a/index.html
+++ b/index.html
@@ -1,5 +1,4 @@
-<!DOCTYPE html>
-
+<!-- Mitglieder von 3s1b-->
         <!--Arne blau-->
         <!--Susanne grün-->
         <!--Feli dunkelblau-->
@@ -31,12 +30,12 @@
               <!-- Animationen -->
               <a-mixin
                 id="scaleUpMixin"
-                animation__scale="property: position; to: 1 8 -10; dur: 2000; easing: linear; loop: false"
+                animation__scale="property: position; to: 1 8 -10; dur: 4000; easing: linear; loop: false"
               ></a-mixin>
-              <a-mixin
+              <<a-mixin
                 id="scaleDownMixin"
-                animation__scale2="property: position; to:0 1.8 -5; dur: 2000; easing: linear; loop: false"
-              ></a-mixin>
+                animation__scale2="property: position; to:0 1.8 -5; dur: 99999; easing: linear; loop: false"
+              ></a-mixin>-->
               <!-- <a-mixin id="fadeInText" animation__showText="property: opacity; dur: 500; to: 1; startEvents: startFadeIn; pauseEvents: startFadeOut"></a-mixin>
                 <a-mixin id="fadeOutText" animation__hideText="property: opacity; dur: 500; to: 0; startEvents: startFadeOut; pauseEvents: startFadeIn"></a-mixin> -->
 
