--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
           </head>
 
           <body>
-            <a-scene>
+            <a-scene fog="type: exponential; color: 333; density: 0.15">
 
               <a-mixin
                 id="changeColorback"
