--- a/index.html
+++ b/index.html
@@ -229,9 +229,8 @@
               </a-camera>
 
 
-
               <!-- SKY -->
-              <a-sky id="sky" color:"#efefef" repeat="0" radius="15" ></a-sky>
+              <a-sky src="background.jpeg" repeat="0" radius="15" ></a-sky>
               <a-plane hoehe color="#efefef" height="30" width="30" rotation="-90 0 0"></a-plane>
             </a-scene>
 
