--- a/index.html
+++ b/index.html
@@ -230,7 +230,7 @@
 
 
               <!-- SKY -->
-              <a-sky src="background.jpeg" repeat="0" radius="15" ></a-sky>
+              <a-sky src="background.jpeg" radius="15" ></a-sky>
               <a-plane hoehe color="#efefef" height="30" width="30" rotation="-90 0 0"></a-plane>
             </a-scene>
 
