ohne farbwechsel sky

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
               let hoehe4K = document.querySelector('#blueBall').object3D.position.y;
 
 
-            if (hoehe1K>=2 && hoehe2K>=2 && hoehe3K>=2 && hoehe4K>=2){
+            /*if (hoehe1K>=2 && hoehe2K>=2 && hoehe3K>=2 && hoehe4K>=2){
               let a = hoehe1K;
               let b = hoehe2K;
               let c = hoehe3K;
@@ -76,7 +76,7 @@
 
 
 
-            }
+            }*/
 
 
 
